--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -821,10 +821,13 @@ form td .status-notes li:hover {
 .armorbox{
     padding:5px;
 }
-.sheet table .status-info-value{
-    min-width:80px;
-    vertical-align:middle;
-    text-align:center;
+.sheet table .status-info-value {
+  min-width: 80px;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 10pt;
+  font-weight: bold;
+}
+.sheet table .status-info-label{
     font-size:10pt;
-    font-weight:bold;
 }
