--- a/templates/background/background.hbs
+++ b/templates/background/background.hbs
@@ -28,7 +28,9 @@
     <div class="tab" data-group="primary" data-tab="grants">
       {{>
         "systems/arcane-arcade-fallout/templates/background/parts/grants.hbs"
-        grants=system.grants
+        races=races
+        humanGrants=humanGrants
+        detailsState=detailsState
       }}
     </div>
   </section>
