--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,18 @@
   align-items: center;
 }
 
+.space-between {
+  justify-content: space-between;
+}
+
+.mx-1 {
+  margin: 0 5px;
+}
+
+.mx-2 {
+  margin: 0 10px;
+}
+
 button > i {
   margin: 0;
 }
