--- a/templates/background/background.hbs
+++ b/templates/background/background.hbs
@@ -10,8 +10,8 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
+    <a class="item" data-tab="grants">Starting Equipment</a>
     <a class="item" data-tab="effects">Effects</a>
-    <a class="item" data-tab="grants">Grants</a>
   </nav>
 
   {{!-- Sheet Body --}}
