--- a/templates/actor/status/passives.hbs
+++ b/templates/actor/status/passives.hbs
@@ -7,7 +7,7 @@
             data-label="Performed a Combat Sequence roll!<br> D20 + Combat Sequence - Penalties + Luck Mod / 2">
             Combat Sequence
         </td>
-        <td>Exhaustion</td>
+        <td><p class="condition" data-condition="Fatigue_and_Exhaustion">Exhaustion</p></td>
     </tr>
     <tr>
         <td>
