--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -85,7 +85,7 @@
         </th>
         <tr>
           <td>
-            camouflage
+            Camouflage
           </td>
           <td id="valueCamouflage" class="upgradeBtn">
             <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerCamouflage" 
