--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -1,3 +1,4 @@
+
 <style>
   .sheet .editor-content {
     line-height: 2;
@@ -16,7 +17,7 @@
         <div>
             Upgrades:
             {{#each system.upgrades as |key|}}
-              {{#GreaterThan key.value 1}}
+              {{#GreaterThan key.rank 1}}
               <a class="content-link" style="color:black" draggable="true" data-uuid="Compendium.world.upgrades.Item.{{key._id}}"
                 data-id="{{key._id}}" data-type="Item" data-pack="arcane-arcade-fallout.upgrades" data-tooltip="{{key.auto}}">
                   <i class="fas fa-suitcase">
@@ -72,261 +73,56 @@
 	  {{editor system.description target="system.description" button=true engine="prosemirror"}}
     </div>
     {{!-- Upgrades Tab --}}
-    <div class="tab" data-group="primary" data-tab="upgrades">
-      <table class="upgrades-table">
-        <th style="width:21%;">
-          Upgrade
-        </th>
-        <th style="width:5%;">
-          &nbsp;Rank&nbsp;
-        </th>
-        <th>
-          Description
-        </th>
-        <tr>
-          <td>
-            Camouflage
-          </td>
-          <td id="valueCamouflage" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerCamouflage" 
-                {{#if system.upgrades.camouflage.value}}
-                  {{#LesserThan system.upgrades.camouflage.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.camouflage.value}}{{system.upgrades.camouflage.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherCamouflage" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.camouflage.value}}
-                    {{#LesserThan system.upgrades.camouflage.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}} 
-                {{#GreaterThan system.upgrades.camouflage.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="desccamouflage">
-            {{system.upgrades.camouflage.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Light
-          </td>
-          <td id="valueLight" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerLight" 
-                {{#if system.upgrades.light.value}}
-                  {{#LesserThan system.upgrades.light.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.light.value}}{{system.upgrades.light.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherLight" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.light.value}}
-                    {{#LesserThan system.upgrades.light.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}} 
-                {{#GreaterThan system.upgrades.light.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descLight">
-            {{system.upgrades.light.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Fitted
-          </td>
-          <td id="valueFitted" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerFitted" 
-                {{#if system.upgrades.fitted.value}}
-                  {{#LesserThan system.upgrades.fitted.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.fitted.value}}{{system.upgrades.fitted.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherFitted" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.fitted.value}}
-                    {{#LesserThan system.upgrades.fitted.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}} 
-                {{#GreaterThan system.upgrades.fitted.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descFitted">
-            {{system.upgrades.fitted.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Lead Lined
-          </td>
-          <td id="valueLeadlined" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerLeadlined" 
-                {{#if system.upgrades.leadlined.value}}
-                  {{#LesserThan system.upgrades.leadlined.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.leadlined.value}}{{system.upgrades.leadlined.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherLeadlined" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.leadlined.value}}
-                    {{#LesserThan system.upgrades.leadlined.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}} 
-                {{#GreaterThan system.upgrades.leadlined.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descLeadLined" >
-            {{system.upgrades.leadlined.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Strengthened
-          </td>
-          <td id="valueStrengthened" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerStrengthened" 
-                {{#if system.upgrades.strengthened.value}}
-                  {{#LesserThan system.upgrades.strengthened.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.strengthened.value}}{{system.upgrades.strengthened.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherStrengthened" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.strengthened.value}}
-                    {{#LesserThan system.upgrades.strengthened.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}} 
-                {{#GreaterThan system.upgrades.strengthened.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descStrengthened">
-            {{system.upgrades.strengthened.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Sturdy
-          </td>
-          <td id="valueSturdy" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerSturdy" 
-                {{#if system.upgrades.sturdy.value}}
-                  {{#LesserThan system.upgrades.sturdy.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.sturdy.value}}{{system.upgrades.sturdy.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherSturdy" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.sturdy.value}}
-                    {{#LesserThan system.upgrades.sturdy.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}}
-                {{#GreaterThan system.upgrades.sturdy.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descSturdy" >
-            {{system.upgrades.sturdy.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Pocketed
-          </td>
-          <td id="valuePocketed" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerPocketed" 
-                {{#if system.upgrades.pocketed.value}}
-                  {{#LesserThan system.upgrades.pocketed.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.pocketed.value}}{{system.upgrades.pocketed.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherPocketed" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.pocketed.value}}
-                    {{#LesserThan system.upgrades.pocketed.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}}
-                {{#GreaterThan system.upgrades.pocketed.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descPocketed">
-            {{system.upgrades.pocketed.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Reinforced
-          </td>
-          <td id="valueReinforced" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerReinforced" 
-                {{#if system.upgrades.reinforced.value}}
-                  {{#LesserThan system.upgrades.reinforced.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.reinforced.value}}{{system.upgrades.reinforced.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherReinforced" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.reinforced.value}}
-                    {{#LesserThan system.upgrades.reinforced.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}}
-                {{#GreaterThan system.upgrades.reinforced.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descReinforced">
-            {{system.upgrades.reinforced.desc}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Hardened
-          </td>
-          <td id="valueHardened" class="upgradeBtn">
-            <button type="button" style="margin-left:2px;max-width:15px; float:left" data-tableSubtraction id="lowerHardened" 
-                {{#if system.upgrades.hardened.value}}
-                  {{#LesserThan system.upgrades.hardened.value 1}} disabled {{/LesserThan}}
-                {{else}} disabled {{/if}}>
-              <i class="fas fa-minus-square"></i>
-            </button>
-              {{#if system.upgrades.hardened.value}}{{system.upgrades.hardened.value}}{{else}}0{{/if}}
-            <button type="button" style="max-width:15px; float:right" data-tableAddition id="higherHardened" 
-                {{#LesserThan system.slots.value 1}}
-                  {{#if system.upgrades.hardened.value}}
-                    {{#LesserThan system.upgrades.hardened.value 1}} disabled {{/LesserThan}}
-                    {{else}} disabled 
-                  {{/if}}
-                {{/LesserThan}} 
-                {{#GreaterThan system.upgrades.hardened.value 3}} disabled {{/GreaterThan}} >
-              <i class="fas fa-plus-square"></i>
-            </button>
-          </td>
-          <td id="descHardened">
-            {{system.upgrades.hardened.desc}}
-          </td>
-        </tr>
-      </table>
+    <div class="tab" data-armor-id data-group="primary" data-tab="upgrades">
+        <table>
+          <th>
+            
+          </th>
+          <th>
+            Upgrade name
+          </th>
+          <th>
+            Cost
+          </th>
+          <th>
+            Details
+          </th>
+          <tr>
+            <td>
+              <button addUpgradeBtn id="addUpgradeBtn">Add</button>
+            </td>
+            <td>
+              <select name="upgradesSelector" id="upgradesSelector">
+                <option value="Refresh">Refresh Upgrades List</option>
+              </select>
+            </td>
+            <td>
+              <div id="upgradeCost" name="upgradeCost">
+              </div>
+            </td>
+            <td>
+              <div id="upgradeDetails" name="upgradeDetails">
+              </div>
+            </td>
+          </tr>
+        </table>
+        <ol>
+          {{#each system.upgrades as |key|}}
+            {{#if key.id}}
+          <li>
+              <a class="content-link" style="color:black" draggable="true" data-uuid="Compendium.arcane-arcade-fallout.upgrades.Item.{{key.id}}"
+                data-id="{{key.id}}" data-type="Item" data-pack="arcane-arcade-fallout.upgrades" data-tooltip="Click for details">
+                <i class="fas fa-suitcase">
+                </i>{{ key.name }}
+              </a>
+              <a class="item-control upgrade-delete" deleteUpgrade title="Delete Upgrade" id="delete{{key.id}}">
+                <i class="fas fa-trash"></i>
+              </a>
+              </a>
+          </li>
+            {{/if}}
+          {{/each}}
+        </ol>
     </div>
 
     {{!-- Effects Tab --}}
