Multiple Updates to CSS/Style and HTML

--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -119,8 +119,8 @@
             </table>
             </div><br />
             <table class="equipped-stats">
-                <tr><td colspan=999><h3>CHEMS</h3></td><td></td></tr>
-                <tr><td>Name</td><td>Qty</td><td>Properties</td></tr>
+                <tr><td colspan=999><h3>CHEMS</h3></td></tr>
+                <tr><td>Name</td><td>Qty</td><td>Properties</td><td></td></tr>
                 {{#each chems as |item id|}}
                 <tr>
                     <td style="width: 100px">
