--- a/templates/background/parts/grants.hbs
+++ b/templates/background/parts/grants.hbs
@@ -21,20 +21,20 @@
             <button
               class="mx-1"
               type="button"
-              data-increase-quantity
-              data-grant-race="{{ race.id }}"
-              data-grant-item-index="{{@index}}"
-            >
-              <i class="fas fa-plus-square"></i></button
-            ><span>{{ item.quantity }}</span>
-            <button
-              class="mx-1"
-              type="button"
               data-decrease-quantity
               data-grant-race="{{ race.id }}"
               data-grant-item-index="{{@index}}"
             >
-              <i class="fas fa-minus-square"></i>
+              <i class="fas fa-minus-square"></i></button
+            ><span>{{ item.quantity }}</span>
+            <button
+              class="mx-1"
+              type="button"
+              data-increase-quantity
+              data-grant-race="{{ race.id }}"
+              data-grant-item-index="{{@index}}"
+            >
+              <i class="fas fa-plus-square"></i>
             </button>
           </div>
           <div class="flex">
